generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id        Int       @id @default(autoincrement())
  name      String
  email     String    @unique
  password  String
  role      RoleUser  @default(visitor)
  posts     Post[]
  createdAt DateTime
  deletedAt DateTime?
}

enum RoleUser {
  admin
  visitor
  editor
}

model Post {
  id          Int        @id @default(autoincrement())
  title       String
  content     String
  author      User       @relation(fields: [id], references: [id])
  status      StatusPost @default(draft)
  createdAt   DateTime
  publishedAt DateTime?
  updatedAt   DateTime?
  deletedAt   DateTime?
}

enum StatusPost {
  draft
  published
  deleted
}
