@startuml "DataBase Schema"

class User {
  Int id;
  String name;
  String email;
  String password;
  RoleUser role;
  Datetime createdAt;
  Datetime deletedAt;
}

enum RoleUser {
  admin,
  visitor,
  editor
}

class Post {
  Int id;
  String title;
  String content;
  User author;
  StatusPost status;
  Datetime createdAt;
  Datetime publishedAt;
  Datetime updatedAt;
  Datetime deletedAt;
}

enum StatusPost {
  draft,
  published,
  deleted
}

User "1" -- "1" RoleUser
Post "1" -- "1" StatusPost
User "0..*" -- "1" Post

@enduml